--- a/app/view/macroIndustryDisplay/generalInfo/generalInfo.html
+++ b/app/view/macroIndustryDisplay/generalInfo/generalInfo.html
@@ -40,17 +40,160 @@
             <img class="wholeView cover part_003" src="view/resource/003.png"/>
             <img class="wholeView cover part_002" src="view/resource/002.png"/>
             <img class="wholeView cover part_001" src="view/resource/001.png"/>
-            <div class="touchDescription"><img src="view/resource/轻触部件.png"/></div>
-            <div class="companyList" style="display: none;">
-                <label class="name_part">{{category_toShow}}</label>
-                <div class="list_part">
-                    <ul>
-                        <li ng-repeat="item in list_toShow"><a href="" ng-click="goToCompanyDetails(item)">{{item.name}}</a></li>
-                    </ul>
-                </div>
+            <div class="line_container part_009"><img class="wholeView cover part_009" src="view/resource/009-展开.png" style="opacity: 1;"/></div>
+            <div class="line_container part_008"><img class="wholeView cover part_008" src="view/resource/008-展开.png" style="opacity: 1;"/></div>
+            <div class="line_container part_007"><img class="wholeView cover part_007" src="view/resource/007-展开.png" style="opacity: 1;"/></div>
+            <!--<div class="line_container part_006"><img class="wholeView cover part_006" src="view/resource/006-展开.png" style="opacity: 1;"/></div>-->
+            <!--<div class="line_container part_005"><img class="wholeView cover part_005" src="view/resource/005-展开.png" style="opacity: 1;"/></div>-->
+            <div class="line_container part_004"><img class="wholeView cover part_004" src="view/resource/004-展开.png" style="opacity: 1;"/></div>
+            <div class="line_container part_003"><img class="wholeView cover part_003" src="view/resource/003-展开.png" style="opacity: 1;"/></div>
+            <div class="line_container part_002"><img class="wholeView cover part_002" src="view/resource/002-展开.png" style="opacity: 1;"/></div>
+            <div class="line_container part_001"><img class="wholeView cover part_001" src="view/resource/001-展开.png" style="opacity: 1;"/></div>
+            <!--展开列表内容-->
+            <div class="briefAndList_container part_001 part_001_1">
+                <div><label class="brief">
+                    汽车转向系统是用来改变或保持汽车行驶或倒退方向的一系列装置，包括机械转向系统和动力转向系统。机械转向系统以驾驶员的体力作为转向能源，其中所有传力件都是机械的。机械转向系由转向操纵机构、转向器和转向传动机构三大部分组成。动力转向系统是兼用驾驶员体力和发动机动力为转向能源的转向系。在正常情况下， 汽车转向所需能量，只有一小部分由驾驶员提供，而大部分是由发动机通过动力转向装置提供的。
+                </label></div>
+                <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
+                <table class="companyTable">
+                    <tr ng-repeat="row in list_toShow[0]">
+                        <td ng-repeat="item in row track by $index"><a ng-click="goToCompanyDetails(item)">{{item.name}}</a></td>
+                    </tr>
+                </table>
             </div>
+            <div class="briefAndList_container part_001 part_001_2">
+                <div><label class="brief">
+                    汽车电气仪表包括了所有电气设备的显示仪表盘，它们显示了汽车的工作状况，是人和汽车的交互界面，常规的仪表有车速表、转速表、机油压力表、水温表、充电表、燃油表等。包括产品设计、技术开发、生产制造等。行业领先企业包括上海德科、江苏新通达电子科技股份有限公司、成都天兴仪表股份有限公司等。’
+                </label></div>
+                <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
+                <table class="companyTable">
+                    <tr ng-repeat="row in list_toShow[1]">
+                        <td ng-repeat="item in row track by $index">{{item.name}}</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="briefAndList_container part_002">
+                <div><label class="brief">
+                    纺织业是生产织物和生产制成织物的纤维、纱、线和其他原料，将自然纤维和人造纤维原料加工成各种纱、丝、线、绳、织物及其染整制品的工业部门，包括棉纺织加工、化纤织造加工、麻纺织加工、印染加工等，在中国是一个劳动密集程度高和对外依存度较大的产业。
+                </label></div>
+                <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
+                <table class="companyTable">
+                    <tr ng-repeat="row in list_toShow[0]">
+                        <td ng-repeat="item in row track by $index"><a ng-click="goToCompanyDetails(item)">{{item.name}}</a></td>
+                    </tr>
+                </table>
+            </div>
+            <div class="briefAndList_container part_003 part_003_1">
+                <div><label class="brief">
+                    车身及外观设备行业是指根据汽车工程设计原理，结合人们追求外观美学的需求，对汽车进行造型设计、车身工程开发、底盘工程开发、动力系统工程开发、整车集成开发、电子电器工程开发，并按照产品设计和工艺要求制造相应设备的行业。
+                </label></div>
+                <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
+                <table class="companyTable">
+                    <tr ng-repeat="row in list_toShow[0]">
+                        <td ng-repeat="item in row track by $index"><a ng-click="goToCompanyDetails(item)">{{item.name}}</a></td>
+                    </tr>
+                </table>
+            </div>
+            <div class="briefAndList_container part_003 part_003_2">
+                <div><label class="brief">
+                    行业内包括初级形态的塑料及合成树脂制造、合成橡胶制造、合成纤维单(聚合)体的制造及其他合成材料制造。中国合成材料需求增长迅速，但是对进口依赖程度仍然较高。行业内包括浙江恒逸集团有限公司、荣盛石化股份有限公司、万华化学集团股份有限公司等。
+                </label></div>
+                <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
+                <table class="companyTable">
+                    <tr ng-repeat="row in list_toShow[1]">
+                        <td ng-repeat="item in row track by $index">{{item.name}}</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="briefAndList_container part_004 part_004_1">
+                <div><label class="brief">
+                    车身及外观设备行业是指根据汽车工程设计原理，结合人们追求外观美学的需求，对汽车进行造型设计、车身工程开发、底盘工程开发、动力系统工程开发、整车集成开发、电子电器工程开发，并按照产品设计和工艺要求制造相应设备的行业。
+                </label></div>
+                <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
+                <table class="companyTable">
+                    <tr ng-repeat="row in list_toShow[0]">
+                        <td ng-repeat="item in row track by $index"><a ng-click="goToCompanyDetails(item)">{{item.name}}</a></td>
+                    </tr>
+                </table>
+            </div>
+            <div class="briefAndList_container part_004 part_004_2">
+                <div><label class="brief">
+                    行业内包括初级形态的塑料及合成树脂制造、合成橡胶制造、合成纤维单(聚合)体的制造及其他合成材料制造。中国合成材料需求增长迅速，但是对进口依赖程度仍然较高。行业内包括浙江恒逸集团有限公司、荣盛石化股份有限公司、万华化学集团股份有限公司等。
+                </label></div>
+                <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
+                <table class="companyTable">
+                    <tr ng-repeat="row in list_toShow[1]">
+                        <td ng-repeat="item in row track by $index">{{item.name}}</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="briefAndList_container part_007 part_007_1">
+                <div><label class="brief">
+                    轮胎行业涉及轮胎的生产、销售、售后、美容等增值服务。利用橡胶制品制造各种车辆或机械上装配的接地滚动的圆环形轮胎。轮胎耗用了世界橡胶量的一半。中国轮胎工业发展迅速已成为世界第一轮胎生产大国。领先企业包括中策橡胶集团有限公司、佳通轮胎（中国）投资有限公司、山东恒丰橡胶有限公司等。
+                </label></div>
+                <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
+                <table class="companyTable">
+                    <tr ng-repeat="row in list_toShow[0]">
+                        <td ng-repeat="item in row track by $index"><a ng-click="goToCompanyDetails(item)">{{item.name}}</a></td>
+                    </tr>
+                </table>
+            </div>
+            <div class="briefAndList_container part_007 part_007_2">
+                <div><label class="brief">
+                    行业内以天然及合成橡胶为原料生产各种橡胶制品，以生产轮胎橡胶制品、胶管胶带为主。主要企业包括安徽中鼎控股（集团）股份有限公司、株洲时代新材料科技股份有限公司、陕西延长石油西北橡胶有限责任公司等。
+                </label></div>
+                <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
+                <table class="companyTable">
+                    <tr ng-repeat="row in list_toShow[1]">
+                        <td ng-repeat="item in row track by $index">{{item.name}}</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="briefAndList_container part_008 part_008_1">
+                <div><label class="brief">
+                    汽车底盘由传动系、行驶系、转向系和制动系四部分组成。底盘作用是支承、安装汽车发动机及其各部件、总成，成形汽车的整体造型，并接受发动机的动力，使汽车产生运动，保证正常行驶。行业内领先企业包括万向钱潮股份有限公司、采埃孚底盘技术（长春）有限公司、万都（北京）汽车底盘系统有限公司等。
+                </label></div>
+                <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
+                <table class="companyTable">
+                    <tr ng-repeat="row in list_toShow[0]">
+                        <td ng-repeat="item in row track by $index"><a ng-click="goToCompanyDetails(item)">{{item.name}}</a></td>
+                    </tr>
+                </table>
+            </div>
+            <div class="briefAndList_container part_008 part_008_2">
+                <div><label class="brief">
+                    发动机设备作为汽车的动力来源，也是汽车关键核心部件之一。行业涉及发动机零部件的制造、加工、销售等方面。我国汽车发动机行业呈现出良好的发展局面。近年我国汽车发动机零部件出口规模的增长迅速，国际市场竞争力正在不断提升。
+                </label></div>
+                <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
+                <table class="companyTable">
+                    <tr ng-repeat="row in list_toShow[1]">
+                        <td ng-repeat="item in row track by $index">{{item.name}}</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="briefAndList_container part_009">
+                <div><label class="brief">
+                    金属制品行业包括结构性金属制品制造、金属工具制造、集装箱及金属包装容器制造、不锈钢及类似日用金属制品制造等。以中国有色金属工业总公司、德国莱茵金属公司、中信金属公司等为代表。随着社会的进步和科技的发展，金属制品在工业、农业以及人们的生活各个领域的运用越来越广泛。
+                </label></div>
+                <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
+                <table class="companyTable">
+                    <tr ng-repeat="row in list_toShow[0]">
+                        <td ng-repeat="item in row track by $index"><a ng-click="goToCompanyDetails(item)">{{item.name}}</a></td>
+                    </tr>
+                </table>
+            </div>
+            <!--<img class="wholeView cover part_001" src="view/resource/001-展开.png" style="opacity: 1;"/>-->
+            <div class="touchDescription"><img src="view/resource/轻触部件.png"/></div>
+            <!--<div class="companyList" style="display: none;">-->
+                <!--<label class="name_part">{{category_toShow}}</label>-->
+                <!--<div class="list_part">-->
+                    <!--<ul>-->
+                        <!--<li ng-repeat="item in list_toShow"><a href="" ng-click="goToCompanyDetails(item)">{{item.name}}</a></li>-->
+                    <!--</ul>-->
+                <!--</div>-->
+            <!--</div>-->
             <div id="part_009" name="金属" class="part_toTouch part_009" style="opacity: 0;"></div>
-            <div id="part_008" name="行驶底盘设备（含转向设备+制动设备+传动设备+行驶设备+发动机设备" class="part_toTouch part_008" style="opacity: 0;"></div>
+            <div id="part_008" name="行驶底盘设备+发动机设备" class="part_toTouch part_008" style="opacity: 0;"></div>
             <div id="part_007_1" name="轮胎+橡胶" class="part_toTouch part_007" style="opacity: 0;"></div>
             <div id="part_007_2" name="轮胎+橡胶" class="part_toTouch part_007" style="opacity: 0;"></div>
             <div id="part_007_3" name="轮胎+橡胶" class="part_toTouch part_007" style="opacity: 0;"></div>
@@ -60,13 +203,13 @@
             <div id="part_006_3" name="车身及外观设备+金属" class="part_toTouch part_006" style="opacity: 0;"></div>
             <div id="part_006_4" name="车身及外观设备+金属" class="part_toTouch part_006" style="opacity: 0;"></div>
             <div id="part_005" name="玻璃" class="part_toTouch part_005" style="opacity: 0;"></div>
-            <div id="part_004_1" name="合成材料+车身及外观设备" class="part_toTouch part_004" style="opacity: 0;"></div>
-            <div id="part_004_2" name="合成材料+车身及外观设备" class="part_toTouch part_004" style="opacity: 0;"></div>
-            <div id="part_004_3" name="合成材料+车身及外观设备" class="part_toTouch part_004" style="opacity: 0;"></div>
-            <div id="part_004_4" name="合成材料+车身及外观设备" class="part_toTouch part_004" style="opacity: 0;"></div>
-            <div id="part_003" name="合成材料+车身及外观设备" class="part_toTouch part_003" style="opacity: 0;"></div>
+            <div id="part_004_1" name="车身及外观设备+合成材料" class="part_toTouch part_004" style="opacity: 0;"></div>
+            <div id="part_004_2" name="车身及外观设备+合成材料" class="part_toTouch part_004" style="opacity: 0;"></div>
+            <div id="part_004_3" name="车身及外观设备+合成材料" class="part_toTouch part_004" style="opacity: 0;"></div>
+            <div id="part_004_4" name="车身及外观设备+合成材料" class="part_toTouch part_004" style="opacity: 0;"></div>
+            <div id="part_003" name="车身及外观设备+合成材料" class="part_toTouch part_003" style="opacity: 0;"></div>
             <div id="part_002" name="纺织品" class="part_toTouch part_002" style="opacity: 0;"></div>
-            <div id="part_001" name="电气仪器仪表+转向设备" class="part_toTouch part_001" style="opacity: 0;"></div>
+            <div id="part_001" name="转向设备+电气仪器仪表" class="part_toTouch part_001" style="opacity: 0;"></div>
         </div>
         <!--<div id="luntai" class="nameAndList">-->
             <!--<label class="name_part">轮胎</label>-->
