--- a/app/view/home/home.html
+++ b/app/view/home/home.html
@@ -21,7 +21,8 @@
 </div>
 
 <div class="fast-go-btn-container david-container">
-    <div ui-sref="macroIndustryDisplay" class="fast-go-btn go-to-macro"></div>
+    <div ui-sref="macroIndustryList" class="fast-go-btn go-to-macro"></div>
+    <!--<div ui-sref="macroIndustryDisplay" class="fast-go-btn go-to-macro"></div>-->
     <div ui-sref="microIndustryChain" class="fast-go-btn go-to-micro"></div>
     <div class="fast-go-btn go-to-tendency"></div>
 </div>
