--- a/app/view/macroIndustryDisplay/macroIndustryList.html
+++ b/app/view/macroIndustryDisplay/macroIndustryList.html
@@ -1,12 +1,187 @@
 <link rel="stylesheet" href="view/macroIndustryDisplay/macroIndustryList.css"/>
 
-<div class="industryListItem">
-    <img class="img_industry" src="view/macroIndustryDisplay/pic_industry/军事工业.png"/>
-    <div class="cover_industry" style="opacity: 0;"></div>
-    <div class="content_industry">
-        <h3 class="title_industry">xxx</h3>
-        <p class='description_industry' style="opacity: 0;">xxxxxxxxxxxxxxxx</p>
-        <!--<div class="title_container"><h3 class="title_industry">xxx</h3></div>-->
-        <!--<div class="description_container"><p class='description_industry' style="opacity: 0;">xxxxxxxxxxxxxxxx</p></div>-->
+<div class="bg_macro"></div>
+
+<!--行业列表的容器-->
+<div class="list_container">
+    <div class="industryListItem">
+        <img class="img_industry" src="view/macroIndustryDisplay/pic_industry/军事工业.png"/>
+        <div class="cover_industry" style="opacity: 0;"></div>
+        <div class="content_industry">
+            <h3 class="title_industry">军事工业</h3>
+            <p class='description_industry' style="opacity: 0;">
+                军事工业是与军队或战争（战备）有关的工业方面。在中国，军工企业主要是指主要为国防建设服务，承担国防科研生产任务，为国家武装力量提供各种武器装备研制，直接为部队提供武器装备和其它军需物资的工业部门和工厂。
+            </p>
+            <!--<div class="title_container"><h3 class="title_industry">xxx</h3></div>-->
+            <!--<div class="description_container"><p class='description_industry' style="opacity: 0;">xxxxxxxxxxxxxxxx</p></div>-->
+        </div>
+    </div>
+    <div class="industryListItem">
+        <img class="img_industry" src="view/macroIndustryDisplay/pic_industry/家用电器.png"/>
+        <div class="cover_industry" style="opacity: 0;"></div>
+        <div class="content_industry">
+            <h3 class="title_industry">家用电器</h3>
+            <p class='description_industry' style="opacity: 0;">
+                生产销售消费电子产品的行业。一般加点吧传统家电分为三类：黑色家电、白色家电和小家电。黑色家电主要包括电视机、音响、DVD等；白色家电则以空调。电冰箱、洗衣机为主；小家电是指电磁炉、电热水壶等家电产品。
+            </p>
+            <!--<div class="title_container"><h3 class="title_industry">xxx</h3></div>-->
+            <!--<div class="description_container"><p class='description_industry' style="opacity: 0;">xxxxxxxxxxxxxxxx</p></div>-->
+        </div>
+    </div>
+    <div class="industryListItem" ui-sref="macroIndustryDisplay.generalInfo">
+        <img class="img_industry" src="view/macroIndustryDisplay/pic_industry/汽车.png"/>
+        <div class="cover_industry" style="opacity: 0;"></div>
+        <div class="content_industry">
+            <h3 class="title_industry">汽车</h3>
+            <p class='description_industry' style="opacity: 0;">
+                汽车行业一般是指其汽车产品或具有相同工艺过程或提供同类劳动服务划分的经济活动类别。包括汽车生产、销售、售后、美容等增值服务的总体。
+            </p>
+            <!--<div class="title_container"><h3 class="title_industry">xxx</h3></div>-->
+            <!--<div class="description_container"><p class='description_industry' style="opacity: 0;">xxxxxxxxxxxxxxxx</p></div>-->
+        </div>
+    </div>
+    <div class="industryListItem">
+        <img class="img_industry" src="view/macroIndustryDisplay/pic_industry/生物产业.png"/>
+        <div class="cover_industry" style="opacity: 0;"></div>
+        <div class="content_industry">
+            <h3 class="title_industry">生物产业</h3>
+            <p class='description_industry' style="opacity: 0;">
+                生物产业指以生命科学理论和生物技术为基础，结合信息学、系统科学、工程控制等理论和技术手段，通过对生物体及其细胞、亚细胞和分子的组分、结构、功能与作用机理开展研究并制造产品，或改造动物、植物、微生物等并使其具有所期望的品质特性。
+            </p>
+            <!--<div class="title_container"><h3 class="title_industry">xxx</h3></div>-->
+            <!--<div class="description_container"><p class='description_industry' style="opacity: 0;">xxxxxxxxxxxxxxxx</p></div>-->
+        </div>
+    </div>
+    <div class="industryListItem">
+        <img class="img_industry" src="view/macroIndustryDisplay/pic_industry/旅游业.png"/>
+        <div class="cover_industry" style="opacity: 0;"></div>
+        <div class="content_industry">
+            <h3 class="title_industry">旅游业</h3>
+            <p class='description_industry' style="opacity: 0;">
+                旅游业是凭借旅游资源和设施，专门或者主要从事招徕、接待游客、为其提供交通、游览、住宿、餐饮、购物、文娱等六个环节的综合性行业。旅游业务要有三部分构成：旅游业、交通客运业和以饭店为代表的住宿业。
+            </p>
+            <!--<div class="title_container"><h3 class="title_industry">xxx</h3></div>-->
+            <!--<div class="description_container"><p class='description_industry' style="opacity: 0;">xxxxxxxxxxxxxxxx</p></div>-->
+        </div>
+    </div>
+    <div class="industryListItem">
+        <img class="img_industry" src="view/macroIndustryDisplay/pic_industry/房地产.png"/>
+        <div class="cover_industry" style="opacity: 0;"></div>
+        <div class="content_industry">
+            <h3 class="title_industry">房地产</h3>
+            <p class='description_industry' style="opacity: 0;">
+                房地产行业是以土地和建筑物为经营对象，从事房地产开发、建设、经营、管理以及维修、装饰和服务的集多种经济活动为一体的综合性产业。
+            </p>
+            <!--<div class="title_container"><h3 class="title_industry">xxx</h3></div>-->
+            <!--<div class="description_container"><p class='description_industry' style="opacity: 0;">xxxxxxxxxxxxxxxx</p></div>-->
+        </div>
+    </div>
+    <div class="industryListItem">
+        <img class="img_industry" src="view/macroIndustryDisplay/pic_industry/煤炭.png"/>
+        <div class="cover_industry" style="opacity: 0;"></div>
+        <div class="content_industry">
+            <h3 class="title_industry">煤炭</h3>
+            <p class='description_industry' style="opacity: 0;">
+                煤炭行业是指以开采煤炭资源为主的产业，包括煤炭资源勘探、煤田开发、煤矿生产、煤炭贮运、加工转换和环境保护等。
+            </p>
+            <!--<div class="title_container"><h3 class="title_industry">xxx</h3></div>-->
+            <!--<div class="description_container"><p class='description_industry' style="opacity: 0;">xxxxxxxxxxxxxxxx</p></div>-->
+        </div>
+    </div>
+    <div class="industryListItem">
+        <img class="img_industry" src="view/macroIndustryDisplay/pic_industry/服装纺织.png"/>
+        <div class="cover_industry" style="opacity: 0;"></div>
+        <div class="content_industry">
+            <h3 class="title_industry">服装纺织</h3>
+            <p class='description_industry' style="opacity: 0;">
+                包括纺织和服装两类行业。纺织是纺纱与织布的总称，现代纺织是指一种纤维或纤维集合体的多尺度结构加工技术。服装指的是衣服鞋包玩具饰品等的总称。
+            </p>
+            <!--<div class="title_container"><h3 class="title_industry">xxx</h3></div>-->
+            <!--<div class="description_container"><p class='description_industry' style="opacity: 0;">xxxxxxxxxxxxxxxx</p></div>-->
+        </div>
+    </div>
+    <div class="industryListItem">
+        <img class="img_industry" src="view/macroIndustryDisplay/pic_industry/影视业.png"/>
+        <div class="cover_industry" style="opacity: 0;"></div>
+        <div class="content_industry">
+            <h3 class="title_industry">影视业</h3>
+            <p class='description_industry' style="opacity: 0;">
+                影视行业包括研发、生产到销售三个环节，研发指IP研发，生产两个环节包括影视剧的制作，下游的销售环节指的是电视台、院线等企业。
+            </p>
+            <!--<div class="title_container"><h3 class="title_industry">xxx</h3></div>-->
+            <!--<div class="description_container"><p class='description_industry' style="opacity: 0;">xxxxxxxxxxxxxxxx</p></div>-->
+        </div>
+    </div>
+    <div class="industryListItem">
+        <img class="img_industry" src="view/macroIndustryDisplay/pic_industry/机器人.png"/>
+        <div class="cover_industry" style="opacity: 0;"></div>
+        <div class="content_industry">
+            <h3 class="title_industry">机器人</h3>
+            <p class='description_industry' style="opacity: 0;">
+                机器人是一种半自主或全自主工作的机器，包括工业机器人和服务机器人两大类，其最核心的模块是控制系统、驱动系统、减速系统。机器人产业主要分为机器人本体、控制系统、功能零部件三大部分。
+            </p>
+            <!--<div class="title_container"><h3 class="title_industry">xxx</h3></div>-->
+            <!--<div class="description_container"><p class='description_industry' style="opacity: 0;">xxxxxxxxxxxxxxxx</p></div>-->
+        </div>
+    </div>
+    <div class="industryListItem">
+        <img class="img_industry" src="view/macroIndustryDisplay/pic_industry/体育.png"/>
+        <div class="cover_industry" style="opacity: 0;"></div>
+        <div class="content_industry">
+            <h3 class="title_industry">体育</h3>
+            <p class='description_industry' style="opacity: 0;">
+                体育产业指与体育运动相关的一切生产经营活动，包括体育物质产品和体育服务产品的生产、经营两大部分。
+            </p>
+            <!--<div class="title_container"><h3 class="title_industry">xxx</h3></div>-->
+            <!--<div class="description_container"><p class='description_industry' style="opacity: 0;">xxxxxxxxxxxxxxxx</p></div>-->
+        </div>
+    </div>
+    <div class="industryListItem">
+        <img class="img_industry" src="view/macroIndustryDisplay/pic_industry/VR.png"/>
+        <div class="cover_industry" style="opacity: 0;"></div>
+        <div class="content_industry">
+            <h3 class="title_industry">VR</h3>
+            <p class='description_industry' style="opacity: 0;">
+                虚拟现实产业链包括硬件、软件、应用和服务。硬件包括上游的零部件和中游的设备，零部件主要包括传感器、光学设备、芯片和显示屏；设备分为输出设备和交互设备，软件主要指信息处理系统，主要包括采集合成、渲染呈现和物理反馈。
+            </p>
+            <!--<div class="title_container"><h3 class="title_industry">xxx</h3></div>-->
+            <!--<div class="description_container"><p class='description_industry' style="opacity: 0;">xxxxxxxxxxxxxxxx</p></div>-->
+        </div>
+    </div>
+    <div class="industryListItem">
+        <img class="img_industry" src="view/macroIndustryDisplay/pic_industry/重型机械.png"/>
+        <div class="cover_industry" style="opacity: 0;"></div>
+        <div class="content_industry">
+            <h3 class="title_industry">重型机械</h3>
+            <p class='description_industry' style="opacity: 0;">
+                生产销售重型机械产品的行业。常见的重型机械有矿山机械、起重设备、路桥机械、综合重型机械、机场设备、港口设备、铁路设备。
+            </p>
+            <!--<div class="title_container"><h3 class="title_industry">xxx</h3></div>-->
+            <!--<div class="description_container"><p class='description_industry' style="opacity: 0;">xxxxxxxxxxxxxxxx</p></div>-->
+        </div>
+    </div>
+    <div class="industryListItem">
+        <img class="img_industry" src="view/macroIndustryDisplay/pic_industry/家用家居.png"/>
+        <div class="cover_industry" style="opacity: 0;"></div>
+        <div class="content_industry">
+            <h3 class="title_industry">家用家居</h3>
+            <p class='description_industry' style="opacity: 0;">
+                生产销售家居用品的行业。家居用品泛指家具、床上用品、厨卫用具、室内配饰及日常生活需要的商品。
+            </p>
+            <!--<div class="title_container"><h3 class="title_industry">xxx</h3></div>-->
+            <!--<div class="description_container"><p class='description_industry' style="opacity: 0;">xxxxxxxxxxxxxxxx</p></div>-->
+        </div>
+    </div>
+    <div class="industryListItem">
+        <img class="img_industry" src="view/macroIndustryDisplay/pic_industry/海洋交通运输.png"/>
+        <div class="cover_industry" style="opacity: 0;"></div>
+        <div class="content_industry">
+            <h3 class="title_industry">海洋交通运输</h3>
+            <p class='description_industry' style="opacity: 0;">
+                海洋交通运输业是指以船舶为主要工具从事海洋运输以及为海洋运输提供服务的活动，包括远洋旅客运输、沿海旅客运输、远洋货物运输、沿海货物运输、装卸搬运及其他运输服务活动。
+            </p>
+            <!--<div class="title_container"><h3 class="title_industry">xxx</h3></div>-->
+            <!--<div class="description_container"><p class='description_industry' style="opacity: 0;">xxxxxxxxxxxxxxxx</p></div>-->
+        </div>
     </div>
 </div>
