--- a/app/view/macroIndustryDisplay/macroIndustryList.css
+++ b/app/view/macroIndustryDisplay/macroIndustryList.css
@@ -1,9 +1,28 @@
+.bg_macro{
+    position: fixed;
+    top: 0;
+    /*background: radial-gradient(ellipse closest-corner at 55% 45%, rgb(92,92,92), rgb(62,62,62));*/
+    background: url(../../view/resource/背景.png) no-repeat;
+    /*-webkit-background-size: 100%;*/
+    /*background-size: 100%;*/
+    -webkit-background-size: 100vw 100vh;
+    background-size: 100vw 100vh;
+    width: 100vw;
+    height: 100vh;
+    z-index: -1;
+}
+.list_container{
+    width: 1440px;
+    margin: auto;
+}
 .industryListItem{
     position: relative;
     width: 400px;
     height: 250px;
     display: inline-block;
     text-align: center;
+    margin: 30px 38px 30px 38px;
+    cursor: pointer;
 }
 
 .industryListItem .img_industry{
@@ -51,7 +70,7 @@
 /*}*/
 .industryListItem .title_industry{
     font-size: 25px;
-    border-bottom: 20px;
+    margin-bottom: 20px;
     color: whitesmoke;
 }
 /*.industryListItem .description_container{*/
@@ -68,4 +87,5 @@
     opacity: 0;
     transition: opacity 0.5s;
     color: whitesmoke;
+    padding: 0px 40px 0px 40px;
 }
