基本情况页面其他3个图

--- a/app/view/macroIndustryDisplay/generalInfo/generalInfo.html
+++ b/app/view/macroIndustryDisplay/generalInfo/generalInfo.html
@@ -223,18 +223,21 @@
 </div>
 
 <div id="chain_car" class="part">
-    <h3><a href="#chain_car">汽车产业链图</a></h3>
-    <img src="view/macroIndustryDisplay/generalInfo/pic/汽车产业链.png"/>
+    <!--<h3><a href="#chain_car">汽车产业链图</a></h3>-->
+    <img class="other" src="view/resource/汽车产业链图.png"/>
+    <!--<img src="view/macroIndustryDisplay/generalInfo/pic/汽车产业链图.png"/>-->
 </div>
 
 <div id="flowPath_car" class="part">
-    <h3><a href="#flowPath_car">汽车生产流程图</a></h3>
-    <img src="view/macroIndustryDisplay/generalInfo/pic/汽车生产流程图.png"/>
+    <!--<h3><a href="#flowPath_car">汽车生产流程图</a></h3>-->
+    <img class="other" src="view/resource/汽车生产流程图.png"/>
+    <!--<img src="view/macroIndustryDisplay/generalInfo/pic/汽车生产流程图.png"/>-->
 </div>
 
 <div id="atlas_car" class="part">
-    <h3><a href="#atlas_car">中国汽车企业图谱</a></h3>
-    <img src="view/macroIndustryDisplay/generalInfo/pic/中国汽车企业图谱.png"/>
+    <!--<h3><a href="#atlas_car">中国汽车企业图谱</a></h3>-->
+    <img class="other" src="view/resource/中国汽车企业图鉴.png"/>
+    <!--<img src="view/macroIndustryDisplay/generalInfo/pic/中国汽车企业图谱.png"/>-->
 </div>
 
 <link rel="stylesheet" href="view/macroIndustryDisplay/generalInfo/generalInfo.css"/>
