--- a/app/view/macroIndustryDisplay/mainQuotedCompany/cwbl/cwbl.css
+++ b/app/view/macroIndustryDisplay/mainQuotedCompany/cwbl/cwbl.css
@@ -1,6 +1,6 @@
 table{
-    width:80%;
-    margin-left: 10%;
+    width:90%;
+    margin-left: 5%;
 }
 
 table th{
@@ -46,7 +46,7 @@ table tr:nth-child(odd){background:#F4F4F4;}
 .mySelect{
     width: 110px;
     margin-top: -5px;
-    margin-left: 214px;
+    margin-left: 215px;
     background-color: white;
     border-left: 1px solid rgb(0,0,0);
     border-top: 1px solid rgb(0,0,0);
@@ -73,7 +73,7 @@ button{
     width: 600px;
     height: 400px;
     left: 30%;
-    top:18%;
+    top:22%;
     border: 1px solid rgb(175,174,174);
 }
 
@@ -93,6 +93,8 @@ button{
     height: 98%;
     position: absolute;
     padding-top: 10px;
+    font-family: 等线;
+    font-weight: 600;
 }
 
 .paneCore{
@@ -105,8 +107,7 @@ button{
     border: 2px solid rgb(224,234,247);
     padding-top: 10px;
     padding-left: 15px;
-    font-family: 等线;
-    font-weight: 600;
+    overflow-y: auto;
  }
 
 button.myButton{
@@ -119,4 +120,8 @@ span.checkSpan{
 
 .myDiv{
     margin-top: 2px;
+}
+
+img.closeIcon{
+    cursor:pointer;
 }
