--- a/app/view/microIndustryChain/microIndustryChain.html
+++ b/app/view/microIndustryChain/microIndustryChain.html
@@ -2,6 +2,7 @@
 
 <br>
 
+<a ui-sref="microIndustryChain.industryFactorAnalyze">行业因子分析</a>
 <div class="tabbable">
     <ul class="nav nav-tabs">
         <li class="active" id="discoverTab" ng-click="clickDiscoverTab()">
@@ -12,6 +13,5 @@
         </li>
     </ul>
 </div>
-
 
 <ui-view></ui-view>
