--- a/app/view/home/home.html
+++ b/app/view/home/home.html
@@ -1,7 +1,7 @@
 
 <david-nav></david-nav>
 
-<div class="swiper-container david-container" style="height: 700px">
+<div class="swiper-container david-container" style="height: 600px">
     <div class="swiper-wrapper">
         <div class="swiper-slide">
             <p class="bigTitle">花旗产业链平台正式上线</p>
@@ -20,10 +20,41 @@
     <div class="swiper-button-next"></div>
 </div>
 
-<div class="fast-go-btn-container david-container">
-    <div ui-sref="macroIndustryDisplay" class="fast-go-btn go-to-macro"></div>
-    <div ui-sref="microIndustryChain" class="fast-go-btn go-to-micro"></div>
-    <div class="fast-go-btn go-to-tendency"></div>
+<div class="david-container" style="background: #1f1f1f">
+
+    <div style="display: flex;flex-flow: column; align-items: center; justify-content: center; width: 100%; height: 300px;">
+        <img src="view/home/icon/downArrow.svg">
+        <h2 style="color: white">平台三大功能</h2>
+        <h4 style="color: white">基于模型的宏观、微观产业链分析、舆情分析</h4>
+    </div>
+
+    <div class="fast-go-btn-container david-container back_fix" style="height: 600px; padding: 0;background-color: #1f1f1f; background-image: url('view/home/background/microDiv.png')">
+        <div class="macro_hover" style="display: flex;flex-flow: column; align-items: center; justify-content: center; width: 33%; height: 60%;">
+            <div ui-sref="macroIndustryDisplay" class="fast-go-btn go-to-macro"></div>
+            <h3 style="color: white">宏观产业链</h3>
+            <h5 style="color: white">产业链宏观信息集成</h5>
+        </div>
+        <div class="micro_hover" style="display: flex;flex-flow: column;  align-items: center; justify-content: center; width: 33%; height: 60%;">
+            <div ui-sref="microIndustryChain" class="fast-go-btn go-to-micro"></div>
+            <h3 style="color: white">微观产业链</h3>
+            <h5 style="color: white">产业链微观建模、牛人分析</h5>
+        </div>
+        <div class="tendency_hover" style="display: flex;flex-flow: column;  align-items: center; justify-content: center; width: 33%; height: 60%;">
+            <div class="fast-go-btn go-to-tendency"></div>
+            <h3 style="color: white">舆情分析</h3>
+            <h5 style="color: white">专业的数据分析框架</h5>
+        </div>
+    </div>
+
+    <div style="display: flex;flex-flow: column; align-items: center; justify-content: center; width: 100%; height: 300px; margin-top: -200px">
+        <img src="view/home/icon/line.svg">
+        <h2 style="color: white">我们的优势</h2>
+        <h4 style="color: white">专业、用心，为您提供最优质的服务</h4>
+    </div>
+
+    <div class="fast-go-btn-container david-container" style="height: 600px; padding: 0; background: url('view/home/icon/advantage.jpg') no-repeat; background-size: 100%;">
+    </div>
+
 </div>
 
 
