--- a/app/view/login/login.html
+++ b/app/view/login/login.html
@@ -1,40 +1,43 @@
-<nav class="david-navbar david-navbar-bottom" role="navigation">
-    <div>
-        <div>
-            <a ui-sref="home" class="navbar-brand"><img class="nav-icon" src="citi-icon/citi-white.svg" alt="花旗"></a>
-        </div>
-        <div>
-            <ul class="david-navbar-right">
-                <li ui-sref="home"><a>首页</a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
 
 
-<div class="login-block">
-    <div id="login-left-block">
-        <img id="login-ad" src="view/login/ad.png">
-    </div>
-    <div id="login-right-block">
-        <div id="login-cell">
-            <p class="login-big-font">用户登录</p>
-            <input ng-model="username" class="login-input" placeholder="请输入用户名" type="text">
-            <input ng-model="password" class="login-input" placeholder="请输入密码" type="password">
-            <button ng-click="login()" class="login-btn">登录</button>
-            <div class="login-sub">
-                <p class="small">注册新用户</p>
+    <nav class="david-navbar david-navbar-bottom" role="navigation" style="background: rgba(0,0,0,0.5)">
+        <div>
+            <div>
+                <a ui-sref="home" class="navbar-brand"><img class="nav-icon" src="citi-icon/citi-white.svg" alt="花旗"></a>
             </div>
-            <div class="login-notice small">
-                {{notice}}
+            <div>
+                <ul class="david-navbar-right">
+                    <li ui-sref="home"><a>首页</a></li>
+                </ul>
             </div>
-            <div class="login-other">
-                <p class="small">其他登录方式：</p>
-                <button id="citiBtn"></button>
+        </div>
+    </nav>
+
+
+    <div class="login-block">
+        <div id="login-right-block">
+            <div id="login-cell" style="background: url('view/login/login_cell.png') no-repeat center">
+                <div style="margin-left: 300px">
+                    <p class="login-big-font">用户登录</p>
+                    <input ng-model="username" class="login-input" placeholder="请输入用户名" type="text">
+                    <input ng-model="password" class="login-input" placeholder="请输入密码" type="password">
+                    <button ng-click="login()" class="login-btn">登录</button>
+                    <div class="login-sub">
+                        <p class="small">注册新用户</p>
+                    </div>
+                    <div class="login-notice small">
+                        {{notice}}
+                    </div>
+                    <div class="login-other">
+                        <p class="small">其他登录方式：</p>
+                        <button id="citiBtn"></button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-</div>
+
+
 
 
 <link rel="stylesheet" href="view/login/login.css">
