--- a/app/view/home/home.html
+++ b/app/view/home/home.html
@@ -55,6 +55,9 @@
     <div class="fast-go-btn-container david-container" style="height: 600px; padding: 0; background: url('view/home/icon/advantage.jpg') no-repeat; background-size: 100%;">
     </div>
 
+    <div class="fast-go-btn-container david-container" style="height: 600px; margin-top: -200px; padding: 0; background: url('view/home/icon/bottomInfo.jpg') no-repeat; background-size: 100%;">
+    </div>
+
 </div>
 
 
