--- a/app/view/login/login.html
+++ b/app/view/login/login.html
@@ -13,10 +13,15 @@
         </div>
     </nav>
 
+    <div style="position:absolute; display: block; height: 80%; width: 400px; margin-top: 200px; margin-left: 5%; z-index: 1">
+        <p style="color: white; font-size: 40px">花旗产业链金融平台</p>
+        <p style="color: white; font-size: 20px">给您提供高速快捷的自动化分析服务</p>
+    </div>
+
 
     <div class="login-block">
         <div id="login-right-block">
-            <div id="login-cell" style="background: url('view/login/login_cell.png') no-repeat center">
+            <div id="login-cell" style="background: url('view/login/login_cell.png') no-repeat center; z-index: 2">
                 <div style="margin-left: 300px">
                     <p class="login-big-font">用户登录</p>
                     <input ng-model="username" class="login-input" placeholder="请输入用户名" type="text">
