主要上市公司 over

--- a/app/view/macroIndustryDisplay/mainQuotedCompany/cwbl/cwbl.html
+++ b/app/view/macroIndustryDisplay/mainQuotedCompany/cwbl/cwbl.html
@@ -73,7 +73,7 @@
         </div>
     </div>
 </div>
-<div style="margin-left: 12%;width: 70%;margin-top: 5%;background-color: white;height: 150px;">
+<div style="margin-left: 5%;width: 90%;margin-top: 5%;background-color: white;height: 150px;">
     <div id='TITLE' style="display: inline-block;padding: 10px 0px 0px 15px;background-color: #E5F0FF;height: 40px;width: 100%;">
         <label>市场</label>
         <select  ng-model="market" ng-change="changeMarket()">
@@ -101,9 +101,9 @@
 </div>
 
 
-<div style="margin-left: 12%;width: 70%;background-color: white;">
+<div style="margin-left: 5%;width: 90%;background-color: white;">
     <label style="position: absolute;margin-top:-5%;font-size: 20px">汽车-财务比率比较</label>
-    <table id="table">
+    <table id="table" width="100%">
 
 
 
