--- a/app/view/macroIndustryDisplay/mainQuotedCompany/gzbx/gzbx.css
+++ b/app/view/macroIndustryDisplay/mainQuotedCompany/gzbx/gzbx.css
@@ -1,5 +1,6 @@
 table{
-    font-size: 8px;
+    width: 100%;
+    font-size: 10px;
 }
 
 table th{
@@ -108,7 +109,7 @@ button{
     padding-top: 10px;
     padding-left: 15px;
     overflow-y: auto;
- }
+}
 
 button.myButton{
     background: linear-gradient(to bottom, rgb(238, 252, 255), rgb(210, 225, 240));
