相似分析注解

--- a/app/view/macroIndustryDisplay/companyDetails/companyDetails.html
+++ b/app/view/macroIndustryDisplay/companyDetails/companyDetails.html
@@ -17,7 +17,15 @@
 <!--</div>-->
 
 <h3>公司介绍</h3>
-<div id="similarRecommendChart" style="width: 600px;height: 600px"></div>
+<div id="similarRecommendChart" style="width: 600px;height: 600px;float: left"></div>
+<div style="margin-left: 20px;color:  rgba(140,140,140, 0.8)">
+    <h3 >行业相似分析</h3>
+    <p>该图中心点为当前公司，连接该节点的就是该公司所涉及行业，行业又连接了在当前行业下和根公司最为相似的公司结点（相似度算法计算所得）。
+    </p>
+    <p>将鼠标移至公司结点上，可查看当前公司行业情况；将鼠标移至行业结点，可查看所有相似公司的情况。</p>
+    <P>单击任意公司结点可以进入任意公司详情界面。</P>
+    <P>图表上方可筛选查看某些特定行业。</P>
+</div>
  
 <table>
     <tr>
