--- a/app/view/macroIndustryDisplay/generalInfo/generalInfo.html
+++ b/app/view/macroIndustryDisplay/generalInfo/generalInfo.html
@@ -68,7 +68,7 @@
                 <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
                 <table class="companyTable">
                     <tr ng-repeat="row in list_toShow[1]">
-                        <td ng-repeat="item in row track by $index">{{item.name}}</td>
+                        <td ng-repeat="item in row track by $index"><a ng-click="goToCompanyDetails(item)">{{item.name}}</a></td>
                     </tr>
                 </table>
             </div>
@@ -101,7 +101,7 @@
                 <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
                 <table class="companyTable">
                     <tr ng-repeat="row in list_toShow[1]">
-                        <td ng-repeat="item in row track by $index">{{item.name}}</td>
+                        <td ng-repeat="item in row track by $index"><a ng-click="goToCompanyDetails(item)">{{item.name}}</a></td>
                     </tr>
                 </table>
             </div>
@@ -123,7 +123,7 @@
                 <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
                 <table class="companyTable">
                     <tr ng-repeat="row in list_toShow[1]">
-                        <td ng-repeat="item in row track by $index">{{item.name}}</td>
+                        <td ng-repeat="item in row track by $index"><a ng-click="goToCompanyDetails(item)">{{item.name}}</a></td>
                     </tr>
                 </table>
             </div>
@@ -145,7 +145,7 @@
                 <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
                 <table class="companyTable">
                     <tr ng-repeat="row in list_toShow[1]">
-                        <td ng-repeat="item in row track by $index">{{item.name}}</td>
+                        <td ng-repeat="item in row track by $index"><a ng-click="goToCompanyDetails(item)">{{item.name}}</a></td>
                     </tr>
                 </table>
             </div>
@@ -167,7 +167,7 @@
                 <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
                 <table class="companyTable">
                     <tr ng-repeat="row in list_toShow[1]">
-                        <td ng-repeat="item in row track by $index">{{item.name}}</td>
+                        <td ng-repeat="item in row track by $index"><a ng-click="goToCompanyDetails(item)">{{item.name}}</a></td>
                     </tr>
                 </table>
             </div>
